# RIG

./: CMakeLists.txt  README.md  imgui.ini
Assembler/: CMakeLists.txt
Assembler/src/Assembler/: main.cpp
Disassembler/: CMakeLists.txt
Disassembler/src/Disassembler/: main.cpp
IDE/: CMakeLists.txt
IDE/include/IDE/: MainWindow.h  TextEditor.h
IDE/resources/ini/: Config.ini
IDE/src/IDE/: MainWindow.cpp  TextEditor.cpp
Parser/: CMakeLists.txt
Parser/include/Parser/: ErrorMessage.h  Instruction.h  Parser.h  RegisterFile.h  Token.h  Translator.h
Parser/src/Parser/: ErrorMessage.cpp  Instruction.cpp  Parser.cpp  RegisterFile.cpp  Token.cpp
RISC/: CMakeLists.txt
RISC/include/RISC/: DataSectionContainer.h  Instruction.h  Memory.h  RegisterFile.h  Translator.h  defines.h
RISC/src/RISC/: DataSectionContainer.cpp  Instruction.cpp  Memory.cpp  RegisterFile.cpp  Translator.cpp
Rig/: CMakeLists.txt
Rig/include/Rig/: Parser.h
Rig/resources/: testfile.asm  testfile.txt
Rig/src/Rig/: Parser.cpp  main.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: Color.h  Functions.h  Logger.h
Utils/src/Utils/: Functions.cpp  Logger.cpp
